--- a/.github/workflows/group-delete.yml
+++ b/.github/workflows/group-delete.yml
@@ -3,7 +3,7 @@ on:
   issues:
     types: [ opened, edited ]
 jobs:
-  create:
+  delete:
     if: ${{ contains(github.event.issue.title, 'Delete Organization Runner Group') }}
     name: Delete Runner Group
     runs-on: ubuntu-latest
