Add repos-set templates

--- a/.github/ISSUE_TEMPLATE/repos-set.yml
+++ b/.github/ISSUE_TEMPLATE/repos-set.yml
@@ -1,18 +1,18 @@
-name: Organization Runner Group - Add Repos to Runner Group
-description: Request to add repos to an existing organization runner group
-title: "Do Not Edit Title: Add Repos to Organization Runner Group"
+name: Organization Runner Group - Replace All Repos in Runner Group
+description: Request to replaces all existing repos in a runner group with a new set of repos
+title: "Do Not Edit Title: Replace All Repos in Organization Runner Group"
 labels: [ user-created ]
 body:
   - type: markdown
     attributes:
       value: |
-        **Please read before continuing**: This issue form is to request to add repos to an existing organization runner group.
+        **Please read before continuing**: This issue form is to request replaces all repos in an existing organization runner group.
 
         **All of the fields in this form are required.** You must provide the following information:
         - The slug of a GitHub team for which you are the maintainer of. This is not the same as your team name, you can navigate to the teams page and copy and paste the team name from the URL (this is the slug). For example, if your team name is `DevOps Team` then the slug is `devops-team` and can be copy and pasted from the teams page URL.
-        - A comma-separated list of repo slugs to add to the runner group. This is not the same as your repository name, you can navigate to your repository page and copy and paste the repository name from the URL (this is the slug). For example, if your repository name is `DevOps Repo` then the slug is `devops-repo` and can be copy and pasted from the repository page URL.
+        - A comma-separated list of repo slugs to replace the existing runner group repos with. This is not the same as your repository name, you can navigate to your repository page and copy and paste the repository name from the URL (this is the slug). For example, if your repository name is `DevOps Repo` then the slug is `devops-repo` and can be copy and pasted from the repository page URL.
 
-        Once you submit this form, the new repos will have access to the runners assigned to the runner group matching the name of the GitHub team prepended by the `ghm` prefix which identifies the runner group as being managed via automation. For example, if your GitHub team is named `DevOps Team` then the organization runner group will be named `ghm-devops-team`.
+        Once you submit this form, the new set of repos will have access to the runners assigned to the runner group matching the name of the GitHub team prepended by the `ghm` prefix which identifies the runner group as being managed via automation. For example, if your GitHub team is named `DevOps Team` then the organization runner group will be named `ghm-devops-team`.
   - type: checkboxes
     id: acknowledge
     attributes:
