--- a/.github/workflows/token-remove.yml
+++ b/.github/workflows/token-remove.yml
@@ -1,11 +1,11 @@
-name: Create Runner Group
+name: Create Removal Group
 on:
   issues:
     types: [ opened, edited ]
 jobs:
   token-remove:
     if: ${{ contains(github.event.issue.title, 'Create Organization Runner Removal Token') }}
-    name: Create Runner Group
+    name: Create Removal Group
     runs-on: ubuntu-latest
     timeout-minutes: 15
     steps:
