--- a/.github/workflows/token-register.yml
+++ b/.github/workflows/token-register.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: lindluni/org-runner-manager@main
         with:
           action: token-register
+          authorized_team: authorized-org-runner-managers
           repo: org-runner-manager-test
           token: ${{ secrets.TOKEN }}
